Extra padding issue resolved

--- a/inc/assets/css/block-editor-styles-rtl.css
+++ b/inc/assets/css/block-editor-styles-rtl.css
@@ -628,7 +628,7 @@ html {
   max-width: 1400px;
 }
 
-.block-editor-block-list__layout .block-editor-block-list__layout {
+.edit-post-visual-editor .block-editor-block-list__layout .block-editor-block-list__layout {
   padding: 0;
 }
 
